[package]
name = "connectrs"
version = "0.1.0"
authors = ["floatingmountain <shattered.web.master@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
threadpool = "*"
serde = "*"
[dev-dependencies]
criterion = "0.3"
async-std = "*"

[[bench]]
name = "benchmark_load"
harness = false