[package]
name = "async_filemanager"
version = "0.1.0"
authors = ["floatingmountain <shattered.web.master@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["default", "thread-pool"] }
crossbeam-channel = "0.4"
wgpu = {git = "https://github.com/gfx-rs/wgpu-rs", rev ="0c7c3afebb12bf411d6964887b85e5fd152057f5"}
image = "0.23"
[dev-dependencies]
criterion = "0.3"
async-std = "1.6"
[[bench]]
name = "benchmark_load"
harness = false